Create URL from URI
URL constructors deprecated in Java 20.

(cherry picked from commit 7c0d6b4c28988120312d714719a2bd00f5fa6803)